moved helloworld-plugin to separate directory and fixed bugs in smart-pow

--- a/.envrc
+++ b/.envrc
@@ -3,6 +3,7 @@ if has nix; then
   # and capture its environment variables, which will be
   # serialized and captured here by direnv.
   use nix
+    # echo "do nothing"
 fi
 
 source octoprint/venv/bin/activate
